WebCore/wml/WMLInputElement.h
@@ -96,6 +96,7 @@ private:
     friend class WMLCardElement;
     void initialize();
 
+    virtual bool supportsMaxLength() const { return true; }
     String validateInputMask(const String&);
     unsigned cursorPositionToMaskIndex(unsigned);
     String constrainValue(const String&) const;
