third_party/WebKit/LayoutTests/fast/forms/script-tests/input-maxlength-unsupported.js
@@ -1,0 +1,13 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description('A test for maxlength attribute of an input element with non-text type');
+
+var input = document.createElement('input');
+input.maxLength = 2;
+input.type = 'number';
+document.body.appendChild(input);
+input.focus();
+document.execCommand('insertText', false, '1234');
+shouldBe('input.value', '"1234"');
+
+input.parentNode.removeChild(input);
+var successfullyParsed = true;
